test/MC/SVE/regression-tests/negative_tests/sve-stnt1b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8CStoreNT1LSSZ
// Offset register Rm cannot be xzr
stnt1b z27.b, p5, [x18, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
